<resources>
    <string name="app_name">Freemon2</string>
    <!--Common-->
    <string name="next">다음</string>

    <!--Intro Actovity-->
    <string name="intro_main">사람들의 온기를 느낄 수 있는 \n작은 공간</string>

    <!--Permission Actovity-->
    <string name="permission_mainTitle">이용 안내</string>
    <string name="permission_subTitle">본 서비스를 이용하려면 아래 권한을 모두 허용해 주세요.</string>
    <string name="permission_allow">허용하기</string>

    <!--Join Agree-->
    <string name="joinAgree_mainTitle">이용약관에 동의해주세요.</string>
    <string name="joinAgree_allAgreeComment">아래 항목에 대한 모든 동의가 포함되어 있습니다.</string>
    <string name="joinAgree_allAgree">모두 동의합니다.</string>
    <string name="joinAgree_serviceAgree">서비스 이용약관</string>
    <string name="joinAgree_serviceAgreeComment">서비스 이용약관 동의 (필수)</string>
    <string name="joinAgree_profileAgree">개인정보 취급방침</string>
    <string name="joinAgree_profileAgreeComment">개인정보 취급방침 동의 (필수)</string>

    <!--Profile-->
    <string name="joinProfile_accountAnswer">답변</string>
    <string name="joinProfile_accountQuestion">질문</string>
    <string name="joinProfile_interestedCity">관심 지역</string>
    <string name="joinProfile_introduction">자기 소개</string>
    <string name="joinProfile_berth">생년월일</string>
    <string name="joinProfile_men">남성</string>
    <string name="joinProfile_women">여성</string>
    <string name="joinProfile_gender">성별</string>
    <string name="joinProfile_nickName">닉네임</string>


    <string name="joinAgree_main_title">이용약관에 동의해 주세요.</string>
    <string name="joinPhoneAuth_main_title">전화번호 인증</string>
    <string name="joinProfile_main_title">프로필 작성</string>

</resources>