<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.JoinAgreeActivity"
    android:paddingBottom="40dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <TextView
        android:id="@+id/joinAgree_mainTitle"
        android:text="@string/joinAgree_mainTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <!--  필요하면 다시 쓰기
    <TextView
        android:id="@+id/joinAgree_subTitle"
        android:text="@string/joinAgree_subTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/joinAgree_mainTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />
 -->
    <LinearLayout
        android:id="@+id/joinAgree_linearlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/joinAgree_mainTitle"
        >

        <CheckBox
            android:id="@+id/joinAgree_chkAllowAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joinAgree_allAgree"
            android:buttonTint="@color/mainColor" />
        <TextView
            android:id="@+id/joinAgree_chkAllowAllComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/joinAgree_allAgreeComment"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/joinAgree_chkAllowService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinAgree_serviceAgree"
                android:buttonTint="@color/mainColor"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/joinAgree_btnseeServiceContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinAgree_serviceAgreeComment"
                android:layout_gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/joinAgree_chkAllowService"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/joinAgree_chkAllowProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinAgree_profileAgree"
                app:layout_constraintLeft_toLeftOf="parent"
                android:buttonTint="@color/mainColor"/>

            <Button
                android:id="@+id/joinAgree_btnseeProfileContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinAgree_profileAgreeComment"
                android:layout_gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/joinAgree_chkAllowProfile"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>